--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   equatable: ^2.0.5
   geolocator:
   geocoding:
+  url_launcher: ^6.1.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
