--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   geolocator:
   geocoding:
   url_launcher: ^6.1.12
+  flutter_csc_picker: ^0.0.2
+  csc_picker: ^0.2.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
